<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    >


    <RelativeLayout
        android:paddingTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:id="@+id/rlTop"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">





        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/expense"
            app:fontFamily="@font/bold"
            android:textColor="@color/header_color"
            android:textSize="@dimen/_15sdp"/>


        <ImageView
            android:visibility="gone"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/ivSearch"

            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ivFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"/>


        <ImageView
            android:visibility="gone"
            android:id="@+id/ivFilter"

            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"/>




    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_line"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout



            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <LinearLayout
                android:id="@+id/llTop"
                android:paddingTop="@dimen/_5sdp"

                android:layout_width="match_parent"
                android:background="@drawable/rounded_button_border"
                android:weightSum="2"
                android:layout_height="@dimen/_45sdp">



                <LinearLayout
                    android:tag="1"
                    android:id="@+id/llClaimed"
                    android:background="@drawable/rounded_button_dashboard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_below="@+id/txtUserName"
                        android:id="@+id/txtClaimed"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/claimed"
                        app:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"/>


                </LinearLayout>

                <LinearLayout
                    android:tag="0"
                    android:id="@+id/llFixed"
                    android:background="@drawable/rounded_button_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_below="@+id/txtUserName"
                        android:id="@+id/txtFixed"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fixed"
                        app:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"/>


                </LinearLayout>





            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/rvExpenseList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="@dimen/_30sdp"
                    />

                <ImageView
                    android:id="@+id/ivNoData"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/no_image"/>


            </RelativeLayout>




        </LinearLayout>






        <ImageView
            android:id="@+id/ivAdd"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"/>




    </RelativeLayout>














    



</LinearLayout>